2003-05-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c: For the composite, convert, identify, mogrify,
	and montage commands, make sure a usage error is returned if a
	usage message is printed. This is useful for ImageMagickObject
	users who won't see the usage message if stdio is not supported.
	* locale/C.mgk: Added "UsageError" error.  Added missing closure
	to <Corrupt> tag which caused most/many message lookups to fail.

2003-05-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/nt_base.c (lt_dlerror): Defining lt_dlerror to be
	NTGetLastError was not a correct implementation since the
	interface is defined to return a const pointer to a string, but
	NTGetLastError returns an allocated string, causing a memory leak
	if NTGetLastError is used in the place of lt_dlerror.  A new
	lt_dlerror function is added to fix this.
	(lt_dlsetsearchpath): lt_dlsetsearchpath should return an int
	and accept a const char *.
	(lt_dlsym): lt_dlsym is supposed to take a const char *.
	* magick/nt_base.h: lt_dlclose should return an 'int'.
	* magick/nt_base.c (lt_dlclose): Return status from lt_dlclose.
	* magick/module.c (lt_dlclose): lt_dlclose is supposed to return
	an 'int', not 'void'. A return value of zero indicates success.
	* VisualMagick/tests/run_constitute.bat: Add batch script to
	run constitute tests.
	* magick/module.c: Added a ltdl_initialized static flag to track
	if libltdl has been initialized by lt_dlinit().
	(TagToFunctionName): Use a stack buffer for the string rather than
	allocating heap data.
	(UnregisterModule): Report errors via exception info as the
	interface suggests.
	(UnloadModule): Report errors via exception info as the interface
	suggests.
	(DestroyModuleInfo): Only invoke lt_dlexit() if lt_dlinit() has
	previously been invoked.
	* locale/C.mgk: Added FailedToCloseModule module error.
	* magick/module.c (UnloadModule): Report exception via exception